# fbla-school-manager-app

./: Cargo.toml  README.md
migrations/20160815133237_create_posts/: up.sql
src/: central.rs  lib.rs  login.rs  main.rs  manual_schema.rs
src/students/: comp.rs  logic.rs  mod.rs
