[package]
name = "lesi-breaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.20.1", features = [ ] }
reqwest = { version = "0.11.12", features = [ "blocking"] }
tokio = { version = "1.21.2", features = ["full"] }
crossbeam-channel = "0.5.6"
async-trait = "0.1.58"
goldberg = "0.1.0"
sled = "0.34.7"
zerocopy = "0.6.1"
bincode = "1.3.3"
serde = "1.0.152"
serde_derive = "1.0.152"
diesel = { version = "2.0.0", features = ["sqlite"] }
egui-modal = "0.2.0"
diesel_migrations = "2.0.0"

[[rt]]
version = "sex"